@@ -17,7 +17,6 @@ lint_flags = "--check"
 tidy_flags = "--in-place"
 ok_exit_codes = 0
 lint_failure_exit_codes = 1
-expect_stderr = true
 
 [commands.perlcritic]
 type = "lint"
@@ -34,7 +33,7 @@ lint_flags = [ "--assert-tidy", "--no-standard-output", "--outfile=/dev/null" ]
 tidy_flags = [ "--backup-and-modify-in-place", "--backup-file-extension=/" ]
 ok_exit_codes = 0
 lint_failure_exit_codes = 2
-expect_stderr = true
+ignore_stderr = "Begin Error Output Stream"
 
 [commands.podchecker]
 type = "lint"
@@ -42,7 +41,7 @@ include = [ "**/*.{pl,pm,pod}" ]
 cmd = [ "podchecker", "--warnings", "--warnings" ]
 ok_exit_codes = [ 0, 2 ]
 lint_failure_exit_codes = 1
-expect_stderr = true
+ignore_stderr = [ ".+ pod syntax OK", ".+ does not contain any pod commands" ]
 
 [commands.podtidy]
 type = "tidy"
